# code-council

./: .env.example  .gitignore  CLAUDE.md  Dockerfile.backend  Dockerfile.frontend  LICENSE  Makefile  README.md  docker-compose.yml
backend/: alembic.ini  pyproject.toml
backend/config/: default.yaml
backend/src/codecouncil/: cli.py  main.py
backend/src/codecouncil/agents/: __init__.py  archaeologist.py  base.py  definition.py  memory.py  registry.py  scribe.py  skeptic.py  visionary.py
backend/src/codecouncil/api/: __init__.py  app.py  deps.py  metrics.py  middleware.py  pipeline.py  simulation.py  sse.py  websocket.py
backend/src/codecouncil/config/: __init__.py  defaults.py  loader.py  schema.py
backend/src/codecouncil/db/: engine.py  models.py  repositories.py
backend/src/codecouncil/debate/: __init__.py  adversarial.py  base.py  collaborative.py  custom.py  open_floor.py  panel.py  registry.py  socratic.py
backend/src/codecouncil/events/: __init__.py  bus.py  persistence.py  sse.py  websocket.py
backend/src/codecouncil/graph/: __init__.py  checkpointing.py  council_graph.py  nodes.py
backend/src/codecouncil/ingestion/: __init__.py  archive.py  base.py  bitbucket.py  context.py  github.py  gitlab.py  local.py  registry.py
backend/src/codecouncil/models/: __init__.py  agents.py  events.py  findings.py  proposals.py  repo.py  rfc.py  state.py  votes.py
backend/src/codecouncil/output/: __init__.py  action_items.py  base.py  html.py  (+4 more)
backend/tests/integration/: test_api.py  test_graph_run.py
backend/tests/unit/: test_agents.py  test_config.py  test_events.py  test_ingestion.py  test_models.py  test_output.py  test_providers.py  test_topology.py
(+79 files in other folders)
